@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!--
    Copyright (C) 2003  Gord Philpott <gphilpot@mnsi.net>
-   Copyright (C) 2003  Stanislav Sinyagin
+   Copyright (C) 2003, 2010  Stanislav Sinyagin
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -24,10 +24,6 @@
 <!--
    RFC 2662 (ADSL-LINE-MIB)
    Definitions of Managed Objects for the ADSL Lines
-
-   Tested with:
-      Paradyne Hotwire ATM ADSL Line Card;
-      Model: 8365-B1-000; S/W Release: 02.03.54
 -->
 
 
@@ -48,19 +44,15 @@
 
 <datasources>
 
-  <template name="adsl-line-interface">
+  <!-- ******* ATUC and ATUR SNR Margin ******* -->
   
-    <param name="rrd-hwpredict" value="disabled" />
-
-    <!-- ******* Start: ATUC and ATUR SNR Margin ******* -->
+  <template name="adsl-line-snr">  
     <leaf name="Atuc_SnrMgn">
       <param name="comment"            value="ATUC SNR Margin" />
       <param name="snmp-object"  value="$adslAtucCurrSnrMgn.%ifindex-map%" />
       <param name="collector-scale"    value="10,/" />
       <param name="rrd-ds"             value="AtucSnrMgn" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="hidden"             value="yes" />
     </leaf>
 
@@ -70,8 +62,6 @@
       <param name="collector-scale"    value="10,/" />
       <param name="rrd-ds"             value="AturSnrMgn" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="hidden"             value="yes" />
     </leaf>
 
@@ -96,17 +86,18 @@
       <param name="vertical-label"      value="dB" />
       <param name="graph-lower-limit"   value="0" />
     </leaf>
-    <!-- ******* End: ATUC and ATUR SNR Margin ******* -->
+  </template>
+    
 
-    <!-- ******* Start: ATUC and ATUR Attenuation ******* -->
+  <!-- ******* ATUC and ATUR Attenuation ******* -->
+  
+  <template name="adsl-line-atn">  
     <leaf name="Atuc_Atn">
       <param name="comment"            value="ATUC Attenuation" />
       <param name="snmp-object"   value="$adslAtucCurrAtn.%ifindex-map%" />
       <param name="collector-scale"    value="10,/" />
       <param name="rrd-ds"             value="AtucAtn" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="hidden"             value="yes" />
     </leaf>
 
@@ -116,8 +107,6 @@
       <param name="collector-scale"    value="10,/" />
       <param name="rrd-ds"             value="AturAtn" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="hidden"             value="yes" />
     </leaf>
 
@@ -141,67 +130,64 @@
       <param name="vertical-label"      value="dB" />
       <param name="graph-lower-limit"   value="0" />
     </leaf>
-    <!-- ******* End: ATUC and ATUR SNR Margin ******* -->
+  </template>
+  
 
-
-    <!-- ******* Start: ATUC Attainable Rates ******* -->
+  <!-- ******* ATUC and ATUR Attainable Rates ******* -->
+  
+  <template name="adsl-line-attrate">  
     <leaf name="Atuc_AttainableRate">
       <param name="comment"            value="ATUC Attainable Rate" />
       <param name="snmp-object"
              value="$adslAtucCurrAttainableRate.%ifindex-map%" />
       <param name="rrd-ds"             value="AtucAttainableRate" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="graph-legend"       value="ATUC Attainable Rate" />
       <param name="hidden"             value="yes" />
     </leaf>
 
-    <leaf name="Atuc_CurrTxRate">
-      <param name="comment"            value="ATUC Current TX Rate" />
-      <param name="snmp-object"
-             value="$adslAtucChanCurrTxRate.%ifindex-map%" />
-      <param name="rrd-ds"             value="AtucCurrTxRate" />
-      <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
-      <param name="graph-legend"       value="ATUC Curr TX Rate" />
-      <param name="hidden"             value="yes" />
-    </leaf>
-
-    <leaf name="ATUC_TX_Rates">          <!-- Multiple line graph -->
-      <param name="comment"            value="ATUC TX Rates" />
-      <param name="precedence"         value="90" />
-      <param name="ds-type"            value="rrd-multigraph" />
-      <param name="ds-names"           value="attain,curr" />
-
-      <param name="ds-expr-attain"       value="{Atuc_AttainableRate}" />
-      <param name="graph-legend-attain"  value="ATUC Attainable Rate" />
-      <param name="line-style-attain"    value="##maxvalue" />
-      <param name="line-color-attain"    value="##maxvalue" />
-      <param name="line-order-attain"    value="1" />
-
-      <param name="ds-expr-curr"       value="{Atuc_CurrTxRate}" />
-      <param name="graph-legend-curr"  value="ATUC Curr TX Rate" />
-      <param name="line-style-curr"    value="##currvalue" />
-      <param name="line-color-curr"    value="##currvalue" />
-      <param name="line-order-curr"    value="2" />
-
-      <param name="vertical-label"      value="bps" />
-      <param name="graph-lower-limit"   value="0" />
-    </leaf>
-    <!-- ******* End: ATUC TX Rates ******* -->
-
-    <!-- ******* Start: ATUR TX Rates ******* -->
     <leaf name="Atur_AttainableRate">
       <param name="comment"            value="ATUR Attainable Rate" />
       <param name="snmp-object"
              value="$adslAturCurrAttainableRate.%ifindex-map%" />
       <param name="rrd-ds"             value="AturAttainableRate" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="graph-legend"       value="ATUR Attainable Rate" />
+      <param name="hidden"             value="yes" />
+    </leaf>
+
+    <leaf name="AttainableRate">          <!-- Multiple line graph -->
+      <param name="comment"            value="ATUC and ATUR Attainable Rate" />
+      <param name="ds-type"            value="rrd-multigraph" />
+      <param name="ds-names"           value="atuc,atur" />
+
+      <param name="ds-expr-atuc"       value="{Atuc_AttainableRate}" />
+      <param name="graph-legend-atuc"  value="ATUC Attainable Rate" />
+      <param name="line-style-atuc"    value="##nearend" />
+      <param name="line-color-atuc"    value="##nearend" />
+      <param name="line-order-atuc"    value="1" />
+
+      <param name="ds-expr-atur"       value="{Atur_AttainableRate}" />
+      <param name="graph-legend-atur"  value="ATUR Attainable Rate" />
+      <param name="line-style-atur"    value="##farend" />
+      <param name="line-color-atur"    value="##farend" />
+      <param name="line-order-atur"    value="2" />
+
+      <param name="vertical-label"      value="bps" />
+      <param name="graph-lower-limit"   value="0" />
+    </leaf>
+  </template>
+
+  <!-- ******* ATUC and ATUR Channel TX Rates ******* -->
+  
+  <template name="adsl-channel-txrate">      
+    <leaf name="Atuc_CurrTxRate">
+      <param name="comment"            value="ATUC Current TX Rate" />
+      <param name="snmp-object"
+             value="$adslAtucChanCurrTxRate.%ifindex-map%" />
+      <param name="rrd-ds"             value="AtucCurrTxRate" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="graph-legend"       value="ATUC Curr TX Rate" />
       <param name="hidden"             value="yes" />
     </leaf>
 
@@ -211,35 +197,30 @@
              value="$adslAturChanCurrTxRate.%ifindex-map%" />
       <param name="rrd-ds"             value="AturCurrTxRate" />
       <param name="rrd-create-dstype"  value="GAUGE" />
-      <param name="data-file"
-             value="%system-id%_%interface-nick%_adsl-stats.rrd" />
       <param name="graph-legend"       value="ATUR Current TX Rate" />
       <param name="hidden"             value="yes" />
     </leaf>
-
-    <leaf name="ATUR_TX_Rates">          <!-- Multiple line graph -->
-      <param name="comment"            value="ATUR TX Rates" />
-      <param name="precedence"         value="70" />
+    
+    <leaf name="ChannelTXRate">          <!-- Multiple line graph -->
+      <param name="comment"            value="ATUC and ATUR Channel TX Rate" />
       <param name="ds-type"            value="rrd-multigraph" />
-      <param name="ds-names"           value="attain,curr" />
+      <param name="ds-names"           value="atuc,atur" />
 
-      <param name="ds-expr-attain"       value="{Atur_AttainableRate}" />
-      <param name="graph-legend-attain"  value="ATUR Attainable Rate" />
-      <param name="line-style-attain"    value="##maxvalue" />
-      <param name="line-color-attain"    value="##maxvalue" />
-      <param name="line-order-attain"    value="1" />
+      <param name="ds-expr-atuc"       value="{Atuc_CurrTxRate}" />
+      <param name="graph-legend-atuc"  value="ATUC Channel TX Rate" />
+      <param name="line-style-atuc"    value="##nearend" />
+      <param name="line-color-atuc"    value="##nearend" />
+      <param name="line-order-atuc"    value="1" />
 
-      <param name="ds-expr-curr"       value="{Atur_CurrTxRate}" />
-      <param name="graph-legend-curr"  value="ATUR Curr TX Rate" />
-      <param name="line-style-curr"    value="##currvalue" />
-      <param name="line-color-curr"    value="##currvalue" />
-      <param name="line-order-curr"    value="2" />
+      <param name="ds-expr-atur"       value="{Atur_CurrTxRate}" />
+      <param name="graph-legend-atur"  value="ATUR Channel TX Rate" />
+      <param name="line-style-atur"    value="##farend" />
+      <param name="line-color-atur"    value="##farend" />
+      <param name="line-order-atur"    value="2" />
 
       <param name="vertical-label"      value="bps" />
       <param name="graph-lower-limit"   value="0" />
     </leaf>
-    <!-- ******* End: ATUR TX Rates ******* -->
-
   </template>
 
 </datasources>
